[metadata]
name = pytutils
summary = Heap of garbage from trevorj
description-file = README.rst
home-page = https://github.com/akatrevorjay/pytutils
author = Trevor Joynson
author_email = github@skywww.net
license = GPL
keywords = 
    python
    utilities
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True

[files]
packages = 
    pytutils

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = doc/_build/html
